--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<h4>Researcher at MSU Software Engineering & Cybersecurity Lab</h4>
 						<p>Employing Snort, Wireshark, and Docker for network quality research purposes. Developing various testing methodologies to validate the consistency of these software tools in analyzing network traffic.</p>
 						<p>To view my work: <a href="https://github.com/megansteinmasel/snort-network-quality">Press Here</a> 	
-						<h4>IT Information Security Analyst at Billings Clinic Hospital</h4>
+						<h4>Information Security Analyst at Billings Clinic Hospital</h4>
 						<p>I developed and configured custom security alert rules using KQL, collaborated on system architecture to ensure security and compliance, and expanded my knowledge of cybersecurity threats, including network incidents, phishing attacks, and ransomware.</p>
 						
 						<h1>Skills</h1>
